# neovim-dark-monitor

./: .clangd  .gitmodules  LICENSE  README.md  bugs.md  meson.build
src/: main.cpp  shared_pch.hpp
src/monitor/application/: application.cpp  application.hpp  monitor.cpp  monitor.hpp  singleton_client.cpp  singleton_client.hpp
src/monitor/application/mode/: monitor.cpp  monitor.hpp  singleton_client.cpp  singleton_client.hpp
src/monitor/dark_notifier/: dark_notifier.cpp  dark_notifier.hpp
src/monitor/neovim/: client.cpp  client.hpp  proto.hpp  send.hpp
src/monitor/neovim/proto/: message.hpp  msg_type.hpp  nvim_exec_autocmds.hpp  nvim_exec_lua.hpp  nvim_get_api_info.hpp  nvim_set_client_info.hpp
src/monitor/rpc/: client.cpp  client.hpp  dispatcher.cpp  dispatcher.hpp  error.cpp  error.hpp  message.cpp  message.hpp  read.hpp  write.hpp
src/monitor/service/: appearance.hpp  dark_notifier.cpp  dark_notifier.hpp  inventory.cpp  inventory.hpp  monitor.cpp  monitor.hpp  neovim.cpp  neovim.hpp  request_handler.cpp  request_handler.hpp  singleton.cpp  singleton.hpp
src/monitor/singleton/: client.cpp  client.hpp  client_handler.cpp  client_handler.hpp  server.cpp  server.hpp
src/monitor/util/: access_tag.hpp  callback_wrapper.hpp  error.cpp  error.hpp  functional.hpp  inventory.cpp  inventory.hpp  job.hpp  meta.hpp  msgpack_socket_read.cpp  msgpack_socket_read.hpp  scoped.hpp  service.hpp  shared_from_this_base.hpp  signal_ref.hpp
src/monitor/util/asio/: endpoint.cpp  endpoint.hpp  error.hpp  msgpack_socket_read.cpp  msgpack_socket_read.hpp  msgpack_socket_write.hpp
src/monitor/util/os/: user.cpp  user.hpp
subprojects/: .gitignore
